--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,43 @@
-# Python
-*.pyc
-__pycache__/
+# Byte-compiled files and caches
+_pycache_/
+*.py[cod]
 
-# Django
-*.log
+# Django specific
 db.sqlite3
+*.log
 
-# Virtual Environment
-env/
+# Migrations
+/migrations/.pyc 
+/migrations/.py[cod]
+**.pyc
+
+# Secret keys and environment settings
+.env
+.env.local
+
+# Ignore virtual environments
 venv/
+.virtualenv/
+.venv/
 
-instruction.py
+# Static files (optional if not tracked)
+staticfiles/
+media/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE/editor specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Ignore compiled files
+.cpython-
+
+# Ignore Python egg info
+*.egg-info/
+dist/
+build/
